--- a/package.json
+++ b/package.json
@@ -75,6 +75,11 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,html,yml,css,less,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -148,6 +153,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
     "less": "3.11.1",
-    "less-loader": "6.1.0"
+    "less-loader": "6.1.0",
+    "prettier": "^2.4.1"
   }
 }
