--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-refresh": "^0.8.3",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
