--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-refresh": "^0.8.3",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
+    "recoil": "^0.5.2",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^10.0.5",
